--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,7 +1,24 @@
-<%- include('../layout', { 
-    body: `
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Error - My Pink App</title>
+    <link rel="stylesheet" href="/css/style.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/">Home</a>
+      </nav>
+    </header>
+
+    <main>
       <h2>An error occurred</h2>
       <p><%= errorMsg %></p>
-    `,
-    user: user
-}) %>
+      <a href="/">Go Back</a>
+    </main>
+
+    <footer>
+      <p>My Pink Footer &copy; 2025</p>
+    </footer>
+  </body>
+</html>
