Updated some bags

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Pink App</title>
+    <title>GI</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-      <p>My Pink Footer &copy; 2025</p>
+      <p>Someday I'll have a titan. &copy; 2025</p>
     </footer>
   </body>
 </html>
