--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home - My Pink App</title>
+    <title>Home - GI </title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -19,12 +19,12 @@
     </header>
 
     <main>
-      <h1>Welcome <%= user ? user.email : "Guest" %> to My Pink App!</h1>
-      <p>Это классное розовое приложение!</p>
+      <h1>Welcome <%= user ? user.email : "Guest" %> to GI community!</h1>
+      <p>Its app about my history a long way for titan rang</p>
     </main>
 
     <footer>
-      <p>My Pink Footer &copy; 2025</p>
+      <p> Someday I'll have a titan.&copy; 2025</p>
     </footer>
   </body>
 </html>
