--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Login - My Pink App</title>
+    <title>Login - GI</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
