--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Error - My Pink App</title>
+    <title>Error - GI</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -18,7 +18,7 @@
     </main>
 
     <footer>
-      <p>My Pink Footer &copy; 2025</p>
+      <p>Someday I'll have a titan. &copy; 2025</p>
     </footer>
   </body>
 </html>
