--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Profile - My Pink App</title>
+    <title>Profile - GI</title>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -28,7 +28,7 @@
     </main>
 
     <footer>
-      <p>My Pink Footer &copy; 2025</p>
+      <p> Someday I'll have a titan.&copy; 2025</p>
     </footer>
   </body>
 </html>
