--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -17,20 +17,24 @@
       <p>Email: <%= user.email %></p>
 
       <% if (user.profilePicture) { %>
-        <img src="<%= user.profilePicture %>" alt="Profile Picture" width="150">
-        <!-- Форма для удаления фото -->
-        <form action="/profile/delete-picture?_method=DELETE" method="POST">
-          <button type="submit" class="delete-btn">Delete Profile Picture</button>
-        </form>
+        <div class="profile-picture-container">
+          <img src="<%= user.profilePicture %>" alt="Profile Picture">
+        </div>
       <% } else { %>
         <p>No profile picture</p>
       <% } %>
 
-      <!-- Форма для загрузки нового фото -->
-      <form action="/profile?_method=PUT" method="POST" enctype="multipart/form-data">
+      <!-- Форма для загрузки и удаления фото -->
+      <form action="/profile?_method=PUT" method="POST" enctype="multipart/form-data" class="profile-form">
         <label>Upload new profile picture</label>
         <input type="file" name="profilePicture">
-        <button type="submit">Update Profile</button>
+
+        <div class="button-group">
+          <button type="submit" class="update-btn">Update Profile</button>
+          <% if (user.profilePicture) { %>
+            <button type="submit" formaction="/profile/delete-picture?_method=DELETE" class="delete-btn">Delete Profile Picture</button>
+          <% } %>
+        </div>
       </form>
     </main>
 
