--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,12 +81,12 @@ header, footer {
 }
 
 .delete-btn {
-    background-color: #ff4444;
+    background-color: #ff99aa;
     color: white;
 }
 
 .delete-btn:hover {
-    background-color: #cc0000;
+    background-color: #ff6680;
 }
 
 /* 📌 Адаптивность */
